<resources>
    <string name="app_name">myRun1</string>
    <string name="form_username">Email</string>
    <string name="email_input">Email</string>
    <string name="password_input">Password</string>
    <string name="sign_in_button">Sign In</string>
    <string name="register_button">Register</string>
    <string name="name_input">Name</string>
    <string name="phone_input">Phone</string>
    <string name="major_input">Major</string>
    <string name="class_input">Dartmouth Class</string>
    <string name="female_input">Female</string>
    <string name="male_input">Male</string>
    <string name="register_button2">Register</string>
    <string name="login_error_message">Email or password is incorrect!</string>
    <string name="change_pic">Change</string>
    <string name="saved_image">Profile Image Saved</string>
    <string name="camera_error">Camera Error</string>
    <string name="settings">Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="success_saved">Successfully Saved!</string>
    <string name="password_length_error">Password must be at least 6 characters</string>
    <string name="field_required_error">This field is required</string>
    <string name="invalid_email_error">This email address is invalid</string>
    <string name="gender_needed">Gender is required!</string>
    <string name="profile_picture_picker">Profile Picture Picker</string>
    <string name="dialog_photo_picker">dialog_photo_picker</string>
    <string name="dialog">dialog</string>
    <string name="input_type">Input Type</string>
    <string name="activity_type">Activity Type</string>
    <string name="title_start">Start</string>
    <string name="title_history">History</string>
    <string name="application_settings">Application Settings</string>
    <string name="privacy_settings">Privacy Settings</string>
    <string name="summary_privacy_settings">Posting your records anonymously</string>
    <string name="summary_unit_preference">Select the units</string>
    <string name="unit_preference">Unit Preference</string>
    <string name="summary_webpage">http://cs.dartmouth.edu/~campbell/cs65/cs65.html</string>
    <string name="webpage">Webpage</string>
    <string name="account_settings">Account Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="activity">Activity</string>
    <string name="date">Date</string>
    <string name="duration">Duration</string>
    <string name="distance">Distance</string>
    <string name="calorie">Calorie</string>
    <string name="heartbeat">Heartbeat</string>
    <string name="comment">Comment</string>
    <string name="sign_out_key_btn">test</string>
    <string name="save">Save</string>
    <string name="time">Time</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="delete">DELETE</string>
    <string name="title_activity_maps">Map</string>
    <string name="action_name">sync</string>
    <string name="sync">sync</string>
    <string name="title_board">Board</string>
    <string name="auth_fail_message">Authentication Failed!</string>
</resources>
